// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component should render with selected media 1`] = `
Array [
  <div
    class="singleItemSelection"
  >
    <button
      class="button"
      type="button"
    >
      <span
        aria-label="su-image"
        class="su-image"
      />
    </button>
    <div
      class="itemContainer"
    >
      <div
        class="item"
      >
        <div
          class="mediaItem"
        >
          <img
            alt="test media"
            class="thumbnailImage"
            src="http://lorempixel.com/25/25"
          />
          <div
            class="mediaTitle"
          >
            test media
          </div>
        </div>
      </div>
      <button
        class="removeButton"
        type="button"
      >
        <span
          aria-label="su-trash-alt"
          class="su-trash-alt"
        />
      </button>
    </div>
  </div>,
  <div>
    single media selection overlay
  </div>,
]
`;

exports[`Component should render without selected media 1`] = `
Array [
  <div
    class="singleItemSelection"
  >
    <button
      class="button"
      type="button"
    >
      <span
        aria-label="su-image"
        class="su-image"
      />
    </button>
    <div
      class="itemContainer"
    >
      <div
        class="item"
      >
        <div
          class="empty"
        >
          sulu_media.select_media_singular
        </div>
      </div>
    </div>
  </div>,
  <div>
    single media selection overlay
  </div>,
]
`;
